fix treeitem margin collapsing

--- a/MduiBlazor.Shared/Pages/Examples/Pickers/SimplePicker.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Pickers/SimplePicker.razor
@@ -6,9 +6,11 @@
 <MduiPicker @bind-Value="@value" Searchable="@searchable" Readonly="@read_only" Disabled="@disabled" Dense="@dense"
     TValue="@string" MaxHeight="200px">
     <MduiPickerItem DisplayString="" TValue="@string" Value="@null">请选择</MduiPickerItem>
+    <MduiSubheader>options1~3</MduiSubheader>
     <MduiPickerItem DisplayString="option1" Value="@("option1")" />
     <MduiPickerItem DisplayString="option2" Value="@("option2")" />
     <MduiPickerItem DisplayString="option3" Value="@("option3")" />
+    <MduiSubheader>options4~6</MduiSubheader>
     <MduiPickerItem DisplayString="option4" Value="@("option4")" />
     <MduiPickerItem DisplayString="option5" Value="@("option5")" />
     <MduiPickerItem DisplayString="option6" Value="@("option6")" />
