--- a/MduiBlazor/Components/Collapse/MduiCollapse.razor
+++ b/MduiBlazor/Components/Collapse/MduiCollapse.razor
@@ -5,9 +5,9 @@
     <div class="@HeaderClassname">
         @HeaderContent
     </div>
-    <MduiElement HtmlTag="@BodyHtmlTag" Class="@BodyClassname">
+    <div Class="@BodyClassname">
         <div class="mdui-collapse-content">
             @ChildContent
         </div>
-    </MduiElement>
+    </div>
 </MduiElement>
