update list active item border

--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -45,7 +45,7 @@
         </MduiToolbar>
     </MduiAppbar>
 
-    <MduiDrawer Class="mdui-shadow-1" UseMduiTypo @bind-Opened="@_open" Fixed Inset="@Persistent"
+    <MduiDrawer Class="mdui-shadow-1" @bind-Opened="@_open" Fixed Inset="@Persistent"
         Persistent="@Persistent">
         <MduiSwipeArea OnSwipe="@OnSwipe" Style="height:100%;">
             <NavMenu />
