--- a/mdui/src/components/list/index.less
+++ b/mdui/src/components/list/index.less
@@ -111,6 +111,7 @@
 .mdui-list-item-active {
   font-weight: 700;
   background-color: @color-hover-black;
+  border-left: 2px solid;
 
   .mdui-list-item-content {
     font-weight: 700;
@@ -254,6 +255,32 @@
   .mdui-list-item-three-line {
     height: 54px;
   }
+}
+
+
+/**
+ * =============================================================================
+ * ************   List 强调色   ************
+ * =============================================================================
+ */
+
+& {
+  .loop-accent-theme(@counter-color) when (@counter-color > 0) {
+    .loop-accent-theme((@counter-color - 1));
+    @colorName: extract(@globalAccentColors, @counter-color);
+
+    @color: 'color-@{colorName}-a200';
+
+    .mdui-theme-accent-@{colorName} when not (@colorName =null) {
+
+      // 选中状态的项
+      .mdui-list-item-active {
+        border-color: @@color;
+      }
+    }
+  }
+
+  .loop-accent-theme(length(@globalAccentColors));
 }
 
 
