--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -8585,9 +8585,15 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 /* 内容项 */
 .mdui-picker-item {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 48px;
   margin: 2px;
   padding: 0 16px;
