--- a/MduiBlazor.Shared/Pages/Examples/Pickers/SimplePicker.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Pickers/SimplePicker.razor
@@ -4,7 +4,7 @@
 <MduiCheckbox Switch @bind-Value="@dense" Label="紧凑型" />
 
 <MduiPicker @bind-Value="@value" Searchable="@searchable" Readonly="@read_only" Disabled="@disabled" Dense="@dense"
-    TValue="@string" MaxHeight="200px">
+    TValue="@string" TItem="@object" MaxHeight="200px">
     <MduiPickerItem DisplayString="" TValue="@string" Value="@null">请选择</MduiPickerItem>
     <MduiSubheader>options1~3</MduiSubheader>
     <MduiPickerItem DisplayString="option1" Value="@("option1")" />
