--- a/MduiBlazor/Components/Form/Picker/MduiPicker.razor
+++ b/MduiBlazor/Components/Form/Picker/MduiPicker.razor
@@ -1,6 +1,8 @@
 @namespace MduiBlazor
 @typeparam TValue
+@typeparam TItem
 @inherits MduiInputBase<TValue>
+@implements IPicker<TValue>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <input class="@InputClassname" value="@DisplayValue" readonly="@_readonly" disabled="@Disabled"
@@ -8,7 +10,29 @@
         @onfocus="@OnPickerFocus" />
     <ul class="@ContentClassname" style="@ContentStylelist">
         <CascadingValue Value="@this">
-            @ChildContent
+            @if (ChildContent is not null)
+            {
+                @ChildContent
+            }
+            else
+            {
+                if (Items is not null && ValueFunc is not null && DisplayStringFunc is not null)
+                {
+                    foreach (var item in Items)
+                    {
+                        <MduiPickerItem Value="@ValueFunc(item)" DisplayString="@DisplayStringFunc(item)">
+                            @if (OptionContent is not null)
+                            {
+                                @OptionContent(item)
+                            }
+                            else
+                            {
+                                @DisplayStringFunc(item)
+                            }
+                        </MduiPickerItem>
+                    }
+                }
+            }
         </CascadingValue>
     </ul>
 </div>
