--- a/MduiBlazor/Components/Layout/MduiAppbar.razor
+++ b/MduiBlazor/Components/Layout/MduiAppbar.razor
@@ -2,5 +2,7 @@
 @inherits MduiComponentBase
 
 <header class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @ChildContent
+    <CascadingValue Value="@this" Name="Appbar" IsFixed>
+        @ChildContent
+    </CascadingValue>
 </header>
