--- a/MduiBlazor/Components/Overaly/MduiOverlay.razor
+++ b/MduiBlazor/Components/Overaly/MduiOverlay.razor
@@ -2,5 +2,7 @@
 @inherits MduiComponentBase
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes" @onclick="@OnBackgroundClick">
-    @ChildContent
+    <CascadingValue Value="@this" Name="Overlay" IsFixed>
+        @ChildContent
+    </CascadingValue>
 </div>
