--- a/MduiBlazor/Components/Snackbar/MduiSnackbarProvider.razor
+++ b/MduiBlazor/Components/Snackbar/MduiSnackbarProvider.razor
@@ -3,7 +3,7 @@
 
 @if (SnackbarList.Any())
 {
-    <CascadingValue Value="@this" IsFixed>
+    <CascadingValue Value="@this" Name="SnackbarProvider" IsFixed>
         @foreach (var instance in SnackbarList.OrderBy(x => x.TimeStamp))
         {
             <MduiSnackbar @key="instance" Options="@(instance.Options??Options)" Color="@instance.Color" SnackbarId="@instance.Id">
