update dialog fix picker overlay

--- a/MduiBlazor.Shared/Pages/Examples/Dialogs/FixedTitleAndActionsDialog.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Dialogs/FixedTitleAndActionsDialog.razor
@@ -11,7 +11,8 @@
         {
             Modal = true,
             ShowCancelButton = true,
-            ShowConfirmButton = true
+            ShowConfirmButton = true,
+            Scrollable = true
         });
     }
 }
