--- a/mdui/src/components/dialog/index.less
+++ b/mdui/src/components/dialog/index.less
@@ -7,7 +7,7 @@
 @import '../button/index';
 
 .mdui-dialog {
-  position: fixed;
+  position: relative;
   top: 50%;
   right: 0;
   left: 0;
@@ -16,9 +16,7 @@
   width: 92%;
   min-width: 180px;
   max-width: 728px;
-  max-height: 90%;
   margin: auto;
-  overflow: hidden;
   color: #000;
   background-color: #fff;
   border-radius: 2px;
@@ -26,12 +24,10 @@
 
   @media (min-width: @screen-sm-min) {
     width: 85%;
-    max-height: 85%;
   }
 
   @media (min-width: @screen-md-min) {
     width: 80%;
-    max-height: 80%;
   }
 
   .mdui-shadow(24);
@@ -58,13 +54,16 @@
 /* 提示框内容 */
 .mdui-dialog-content {
   box-sizing: border-box;
-  max-height: calc(80vh - 120px);
   padding: 24px;
-  overflow-y: auto;
   color: rgba(0, 0, 0, 0.7);
   font-size: 15px;
   line-height: 1.5;
-  -webkit-overflow-scrolling: touch;
+
+  .mdui-dialog-scrollable & {
+    max-height: 80vh;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 /* 标题随内容滚动 */
