update dialog and treeview

--- a/MduiBlazor/Components/TreeView/MduiTreeView.razor
+++ b/MduiBlazor/Components/TreeView/MduiTreeView.razor
@@ -2,7 +2,7 @@
 @inherits MduiComponentBase
 @typeparam TValue
 
-<ul class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<ul class="@Classname" style="@Stylelist" @attributes="@AdditionalAttributes">
     <CascadingValue Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
