--- a/mdui/src/components/dialog/index.less
+++ b/mdui/src/components/dialog/index.less
@@ -7,7 +7,7 @@
 @import '../button/index';
 
 .mdui-dialog {
-  position: relative;
+  position: fixed;
   top: 50%;
   right: 0;
   left: 0;
@@ -16,7 +16,7 @@
   width: 92%;
   min-width: 180px;
   max-width: 728px;
-  margin: auto;
+  margin: 0 auto;
   color: #000;
   background-color: #fff;
   border-radius: 2px;
