--- a/mdui/src/styles/global.less
+++ b/mdui/src/styles/global.less
@@ -34,10 +34,10 @@ span{
 /* 遮罩层 */
 .mdui-overlay {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: -5000px;
+  right: -5000px;
+  bottom: -5000px;
+  left: -5000px;
   z-index: @z-index-overlay;
   overflow: auto;
   background: rgba(0, 0, 0, .4);
