--- a/MduiBlazor.Shared/_Imports.razor
+++ b/MduiBlazor.Shared/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
-@using MduiBlazor.Shared.Shared
-@using MduiBlazor.Shared.Data
+@using MduiBlazor
 @using MduiBlazor.Shared.Components
+@using MduiBlazor.Shared.Data
+@using MduiBlazor.Shared.Layout
 @using MduiBlazor.Shared.Pages.Examples
