--- a/MduiBlazor/Components/Form/Picker/MduiPicker.razor
+++ b/MduiBlazor/Components/Form/Picker/MduiPicker.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @typeparam TValue
 @typeparam TItem
-@inherits MduiInputBase<TValue>
+@inherits MduiInputBase<TValue?>
 @implements IPicker<TValue>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
