--- a/MduiBlazor/Components/Form/Picker/MduiTreePicker.razor
+++ b/MduiBlazor/Components/Form/Picker/MduiTreePicker.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @typeparam TValue
 @typeparam TItem
-@inherits MduiInputBase<TValue>
+@inherits MduiInputBase<TValue?>
 @implements ITreePicker<TValue>
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
