--- a/MduiBlazor.Shared/Pages/Examples/Cards/FullCard.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Cards/FullCard.razor
@@ -2,10 +2,10 @@
     <MduiCard Title="Title" SubTitle="Subtitle">
         <HeaderContent>
             <MduiCardHeader Title="Title" SubTitle="Subtitle"
-                Avatar="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+                Avatar="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </HeaderContent>
         <MediaContent>
-            <MduiCardMedia ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/1ca4b7b2b4b2f2352aeb.jpg">
+            <MduiCardMedia ImgSrc="_content/MduiBlazor.Shared/images/image.jpg">
                 <MenusContent>
                     <MduiIconButton TextColor="@Colors.Shades.White" Icon="share" />
                 </MenusContent>
