--- a/MduiBlazor.Shared/Pages/Examples/Cards/MediaCoveredCard.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Cards/MediaCoveredCard.razor
@@ -2,7 +2,7 @@
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered Title="Title" SubTitle="Subtitle"
-                 ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/1ca4b7b2b4b2f2352aeb.jpg" />
+                 ImgSrc="_content/MduiBlazor.Shared/images/image.jpg" />
          </MediaContent>
          <ActionsContent>
              <MduiButton DisableRaised>Action 1</MduiButton>
