--- a/MduiBlazor.Shared/Pages/Examples/Cards/SimpleCard.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Cards/SimpleCard.razor
@@ -1,6 +1,6 @@
 <MduiCard Class="mdui-hoverable" style="max-width:360px;">
     <MediaContent>
-        <MduiCardMedia ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/1ca4b7b2b4b2f2352aeb.jpg" />
+        <MduiCardMedia ImgSrc="_content/MduiBlazor.Shared/images/image.jpg" />
     </MediaContent>
     <ActionsContent>
         <MduiButton DisableRaised>Action 1</MduiButton>
