--- a/MduiBlazor.Shared/Pages/Examples/Chips/ImgChip.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Chips/ImgChip.razor
@@ -1,1 +1,1 @@
-<MduiChip ImgSrc="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" Title="Example Chip" />
+<MduiChip ImgSrc="_content/MduiBlazor.Shared/images/avatar.jpg" Title="Example Chip" />
