--- a/MduiBlazor.Shared/Pages/Examples/Lists/AnotherActiveList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AnotherActiveList.razor
@@ -1,7 +1,7 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem Active>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent Title="Brendan Lim" TextLineSpan="@ListItemLineSpan.One">
             You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
@@ -11,7 +11,7 @@
     <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
          <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
          </MduiAvatar>
          <MduiListItemContent Title="me, Scott, Jennifer" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
@@ -21,7 +21,7 @@
      <MduiDivider Inset Class="mdui-m-y-0" />
      <MduiListItem>
          <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
          </MduiAvatar>
          <MduiListItemContent Title="me, Grace Ng" TextLineSpan="@ListItemLineSpan.One">
              You've got to get enough sleep. Other travelling salesmen live a life of luxury. You've got to get enough
