--- a/MduiBlazor.Shared/Pages/Examples/Lists/AvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/AvatarList.razor
@@ -1,25 +1,25 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>Brendan Lim</MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>me, Scott, Jennifer</MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>Grace Ng</MduiListItemContent>
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>Kerem Suer</MduiListItemContent>
     </MduiListItem>
