--- a/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/CheckboxList2.razor
@@ -1,14 +1,14 @@
 <MduiList Style="max-width:480px;">
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>Inbox</MduiListItemContent>
         <MduiCheckbox Value />
     </MduiListItem>
     <MduiListItem>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
         <MduiListItemContent>Outbox</MduiListItemContent>
         <MduiCheckbox Value="@false" />
