--- a/MduiBlazor.Shared/Pages/Examples/Medias/Html5Video.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Medias/Html5Video.razor
@@ -1,5 +1,5 @@
 <MduiVideoContainer>
     <video controls>
-        <source src="https://cdn.w3cbus.com/mdui/docs~1/static/5d263958409c8fa90110.mp4" type="video/mp4">
+        <source src="https://cdn.pixabay.com/video/2020/01/17/31330-385855499_tiny.mp4" type="video/mp4">
     </video>
 </MduiVideoContainer>
