--- a/MduiBlazor.Shared/Pages/Examples/Menus/CustomActivatorMenu.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Menus/CustomActivatorMenu.razor
@@ -2,7 +2,7 @@
     <MduiMenu>
         <ActivatorContent>
             <MduiAvatar>
-                <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+                <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
             </MduiAvatar>
         </ActivatorContent>
         <ChildContent>
