--- a/MduiBlazor.Shared/Pages/Examples/Lists/RightAvatarList.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Lists/RightAvatarList.razor
@@ -2,25 +2,25 @@
     <MduiListItem>
         <MduiListItemContent>Brendan Lim</MduiListItemContent>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/6f40c42e0eceb58345d3.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
         <MduiListItemContent>me, Scott, Jennifer</MduiListItemContent>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/d521c51519ab714a99f9.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
         <MduiListItemContent>Grace Ng</MduiListItemContent>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/3a5e4be433058833e667.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
     </MduiListItem>
     <MduiListItem>
         <MduiListItemContent>Kerem Suer</MduiListItemContent>
         <MduiAvatar>
-            <img src="https://cdn.w3cbus.com/mdui/docs~1/static/5e010867ef986d05d625.jpg" />
+            <img src="_content/MduiBlazor.Shared/images/avatar.jpg" />
         </MduiAvatar>
     </MduiListItem>
 </MduiList>
