--- a/MduiBlazor.Shared/Components/ExampleSection.razor.css
+++ b/MduiBlazor.Shared/Components/ExampleSection.razor.css
@@ -1,102 +1,37 @@
 ﻿.example {
-    margin-top: 1em;
-    margin-bottom: 2.6em;
+    margin: 2em 0;
     position: relative;
-}
-
-.example-tools {
-    position: absolute;
-    right: 0;
-    top: -24px;
-    transition: top .3s;
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.example-tools a {
-    color: rgba(0, 0, 0, .54);
-    display: inline-block;
-    margin: 0 8px;
-}
-
-.example-showcode .example-tools {
-    top: 4px;
-}
-
-.example-demo-label {
     border: 1px solid rgba(0, 0, 0, .12);
-    border-bottom: none !important;
-    border-radius: 3px 3px 0 0;
-    box-sizing: border-box;
-    color: rgba(0, 0, 0, .38);
-    display: none;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 1;
-    padding: 9px 14px;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 100%;
-}
-
-.example-showcode .example-demo-label {
-    display: block;
+    border-radius: 12px;
+    overflow: auto;
 }
 
 .example-demo {
+    margin: 1em;
     padding: 0;
-    transition: padding .3s;
 }
 
-.example-showcode .example-demo {
-    border: 1px solid rgba(0, 0, 0, .12);
-    border-top: none;
-    padding: 14px;
+.example-tools {
+    text-align: center;
+    border-top: 1px solid rgba(0, 0, 0, .12);
 }
 
-::deep .example-code {
-    border: 1px solid rgba(0, 0, 0, .12);
-    border-radius: 0 0 3px 3px;
-    display: block;
-    margin: 0;
+.example-showcode ::deep .example-code {
+    border-top: 1px solid rgba(0, 0, 0, .12);
 }
 
-.example-show ::deep .example-code {
-    border-top: none;
-}
-
-.mdui-theme-layout-dark .example-showcode .example-demo-label {
-    border: 1px solid hsla(0, 0%, 100%, .12);
-    color: hsla(0, 0%, 100%, .5);
-}
-
-@media(prefers-color-scheme: dark) {
-    .mdui-theme-layout-auto .example-showcode .example-demo-label {
-        border: 1px solid hsla(0, 0%, 100%, .12);
-        color: hsla(0, 0%, 100%, .5);
-    }
-}
-
-.mdui-theme-layout-dark .example-showcode .example-demo,
-.mdui-theme-layout-dark .example-showcode ::deep .example-code {
+.mdui-theme-layout-dark .example,
+.mdui-theme-layout-dark .example-showcode ::deep .example-code,
+.mdui-theme-layout-dark .example-tools {
     border: 1px solid hsla(0, 0%, 100%, .12);
 }
 
 @media(prefers-color-scheme: dark) {
 
-    .mdui-theme-layout-auto .example-showcode .example-demo,
-    .mdui-theme-layout-auto .example-showcode ::deep .example-code {
+    .mdui-theme-layout-auto .example,
+    .mdui-theme-layout-auto .example-showcode ::deep .example-code,
+    .mdui-theme-layout-auto .example-tools {
         border: 1px solid hsla(0, 0%, 100%, .12);
-    }
-}
-
-.mdui-theme-layout-dark .example-tools a {
-    color: hsla(0, 0%, 100%, .7);
-}
-
-@media(prefers-color-scheme: dark) {
-    .mdui-theme-layout-auto .example-tools a {
-        color: hsla(0, 0%, 100%, .7);
     }
 }
 
