--- a/MduiBlazor.WebApp/Components/_Imports.razor
+++ b/MduiBlazor.WebApp/Components/_Imports.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MduiBlazor.Client
+@using MduiBlazor.Client.Layout
 @using MduiBlazor.Shared.Layout
 @using MduiBlazor.WebApp
 @using MduiBlazor.WebApp.Components
-@using MduiBlazor.WebApp.Components.Layout
