--- a/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cdn.w3cbus.com/library/ionicons/2.0.1/css/ionicons.min.css" crossorigin="anonymous" />
+<link rel="stylesheet" href="_content/MduiBlazor.Shared/css/ionicons.min.css" />
 
 <MduiIcon Custom Icon="ion-plus-circled" />
 <MduiIcon Custom Color="@Colors.Red.Primary" Icon="ion-plus-circled" />
